Raises floor JRE version from 11 to 17 except core (#3763)
This raises the floor JRE version of libraries except core from 11 to
17. The only reason we had 17 in the past was due to Spark limitations
that affected zipkin-dependencies. After this, folks can also consider
getting rid of AutoValue for the record type (sadly no OpenRewrite for
that ;).

This change was manual except the parts about string formatting,
exception coercing and multi-line literals. Those parts were done with
OpenRewrite via below (reverting changes to core):

```bash
$ mvn -U org.openrewrite.maven:rewrite-maven-plugin:run -Drewrite.recipeArtifactCoordinates=org.openrewrite.recipe:rewrite-migrate-java:RELEASE -Drewrite.activeRecipes=org.openrewrite.java.migrate.UpgradeToJava17
```

The other non-manual step was about JOOQ, which was copy/pasting
commands from the README, which worked without any issue.

---------

Signed-off-by: Adrian Cole <adrian@tetrate.io>